Trying to fix the imports.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = autoapt
-version = 0.9
+version = 0.91
 author = Michał J. Gajda
 author_email = mjgajda@migamake.com
 description = Find how to install missing packages with apt-file
@@ -12,7 +12,7 @@ project_urls =
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: BSD License
-    Operating System :: Linux
+    Operating System :: POSIX :: Linux
 
 [options]
 package_dir =
