--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = autoapt
-version = 0.91
+version = 0.99
 author = Michał J. Gajda
 author_email = mjgajda@migamake.com
 description = Find how to install missing packages with apt-file
@@ -13,6 +13,8 @@ classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: BSD License
     Operating System :: POSIX :: Linux
+license = BSD
+platform = Linux
 
 [options]
 package_dir =
